Navigator.mediaDevices.getSupportedConstraints mistakenly reports torch as false. rdar://124372654 https://bugs.webkit.org/show_bug.cgi?id=270779

Reviewed by Eric Carlson.

As per spec, MediaTrackConstraints member must be true if present.
Each individual source may still or may not support a particular constraint.
We remove RealtimeMediaSourceCenter::m_supportedConstraints and instead make all MediaTrackSupportedConstraints members true by default.
Covered by updated tests.

* LayoutTests/fast/mediastream/MediaDevices-getSupportedConstraints-expected.txt:
* LayoutTests/fast/mediastream/MediaDevices-getSupportedConstraints.html:
* LayoutTests/imported/w3c/web-platform-tests/mediacapture-streams/MediaDevices-getSupportedConstraints.https-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/mediacapture-streams/MediaDevices-getUserMedia.https-expected.txt:
* Source/WebCore/Modules/mediastream/MediaDevices.cpp:
(WebCore::MediaDevices::getSupportedConstraints):
* Source/WebCore/Modules/mediastream/MediaTrackSupportedConstraints.h:
* Source/WebCore/platform/mediastream/RealtimeMediaSourceCenter.cpp:
(WebCore::RealtimeMediaSourceCenter::RealtimeMediaSourceCenter):
* Source/WebCore/platform/mediastream/RealtimeMediaSourceCenter.h:

Canonical link: https://commits.webkit.org/275945@main